2010-01-25  Alexandru Harsanyi  <AlexHarsanyi@gmail.com>

	* Updated license to GPLv3

2010-01-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-actb-checkin-command)
	(ucm-checkin-activity): add support for diff in the log edit
	buffer
	(ucm-actb-revert-command): refresh the status of reverted files.

	* vc-clearcase.el (clearcase-diff-with-diff): use
	`shell-command-to-string' to prevent erasing previous content in
	the diff buffer.
	(vc-clearcase-diff): bind rev1 and rev2 locally for each file

2010-01-12  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-root): use `expand-file-name' on
	FILE before using it.

2010-01-06  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el
	(vc-clearcase-print-log): suport START-REVISION and LIMIT args
	(clearcase-lshistory-fmt)
	(clearcase-lshistory-fmt-ucm): escape the newlines
	(vc-clearcase-root): find the root for directory arguments too

2010-01-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-setup-vprop): store the root-path
	directory with a trailing slash.
	(vc-clearcase-root): new function
	(vc-clearcase-gui-vtree-browser): fix call to
	`start-process-shell-command'

2009-10-27  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-read-activity): 448 use a better default activity in
	`ucm-actb-mode' and `ucm-lsact-mode` buffers.

	* vc-clearcase.el (clearcase-add-attribute)
	(clearcase-remove-attribute): new functions

2009-10-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-actb-checkin-command, ucm-checkin-activity): don't
	use `with-current-buffer' when extracting the checkin comment

2009-09-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-file-fprop): 445 find the FPROP in
	derived buffers of the file (such as version backups)
	(clearcase-diff-with-diff): 446 use `vc-find-revision' to obtain
	required revisions, also don't delete the revisions afterwards.
